add middle9 first step

--- a/css/style.css
+++ b/css/style.css
@@ -270,3 +270,16 @@ top: 105px
   .middle8{
     height: 158px;
   }
+  .middle9-right{
+    height: 344px;
+    width: 370px;
+    margin-left: 35px;
+  }
+  .middle9-right1{
+    color: #fcb816;}
+  .middle9-right2{
+        font-size: 24px;
+    }
+    .middle9-right3{
+    font-size: 14px;
+    }
